rrq/overlays/prod/patches/image-pull-policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
  namespace: rrq
spec:
  template:
    spec:
      containers:
        - name: core-api
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outbox-relay
  namespace: rrq
spec:
  template:
    spec:
      containers:
        - name: outbox-relay
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-worker
  namespace: rrq
spec:
  template:
    spec:
      containers:
        - name: ledger-worker
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-worker
  namespace: rrq
spec:
  template:
    spec:
      containers:
        - name: webhook-worker
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-worker
  namespace: rrq
spec:
  template:
    spec:
      containers:
        - name: fraud-worker
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-dashboard
  namespace: rrq
spec:
  template:
    spec:
      containers:
        - name: admin-dashboard
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-sync-worker
  namespace: rrq
spec:
  template:
    spec:
      containers:
        - name: kong-sync-worker
          imagePullPolicy: IfNotPresent
